deploy/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: authentification
  labels:
    name: authentification
