deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastauth
  namespace: authentification
  labels:
    app: fastauth
spec:
  selector:
    matchLabels:
      app: fastauth
  template:
    metadata:
      namespace: authentification
      labels:
        app: fastauth
    spec:
      containers:
        - name: fastauth
          image: YOUR_REGISTRY_URL/fastauth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: YOUR_PULL_SECRET
