deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastauth-service
  namespace: authentification
  labels:
    app: fastauth
spec:
  selector:
    app: fastauth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
